k8s/api-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-worker
  namespace: assessify
  labels:
    app: assessify-api-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: assessify-api-worker
  template:
    metadata:
      labels:
        app: assessify-api-worker
    spec:
      containers:
        - name: api-worker
          image: assessify-backend:latest
          command: ['node', 'dist/main']
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
